src/auryn/snapshots/auryn__auryn__parser__tests__parse_parenthesis-4.snap
---
source: src/auryn/parser.rs
expression: "verify(\"1 * (2 + 3)\")"
---
AnnotatedParserOutput {
    ast: Some(
        0..11 Root
        |0..11 Block
        ||0..11 Statement
        |||0..11 Expression
        ||||0..11 BinaryOperation
        |||||0..2 Expression
        ||||||0..2 Value
        |||||||0..1 NumberLiteral
        ||||||||Number `1`
        |||||||Whitespace ` `
        |||||Times `*`
        |||||Whitespace ` `
        |||||4..11 Expression
        ||||||4..11 Value
        |||||||4..11 Parenthesis
        ||||||||ParensOpen `(`
        ||||||||5..10 Expression
        |||||||||5..10 BinaryOperation
        ||||||||||5..7 Expression
        |||||||||||5..7 Value
        ||||||||||||5..6 NumberLiteral
        |||||||||||||Number `2`
        ||||||||||||Whitespace ` `
        ||||||||||Plus `+`
        ||||||||||Whitespace ` `
        ||||||||||9..10 Expression
        |||||||||||9..10 Value
        ||||||||||||9..10 NumberLiteral
        |||||||||||||Number `3`
        ||||||||ParensClose `)`
        ,
    ),
    diagnostics: [],
}
