src/auryn/snapshots/auryn__auryn__parser__tests__parse_parenthesis.snap
---
source: src/auryn/parser.rs
expression: "verify(\"(3)\")"
---
AnnotatedParserOutput {
    ast: Some(
        0..3 Root
        |0..3 Expression
        ||ParensOpen
        ||1..2 Number(3)
        |||Number
        ||ParensClose
        ,
    ),
    diagnostics: [],
}
