src/auryn/snapshots/auryn__auryn__parser__tests__reject_large_number.snap
---
source: src/auryn/parser.rs
expression: "verify(\"9999999999999\")"
---
AnnotatedParserOutput {
    ast: Some(
        0..13 Root
        |Number [Error(InvalidNumber)]
        ,
    ),
    diagnostics: [
        ComputedDiagnostic {
            kind: Error(
                InvalidNumber,
            ),
            span: ComputedSpan {
                offset: 0,
                len: 13,
            },
        },
    ],
}
